@@ -7,19 +7,15 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import uk.gov.hmcts.reform.iacaseapi.domain.DateProvider;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCase;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.CaseDetails;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.Event;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.callback.Callback;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.callback.PreSubmitCallbackStage;
-import uk.gov.hmcts.reform.iacaseapi.domain.service.Scheduler;
+import uk.gov.hmcts.reform.iacaseapi.domain.service.CcdDataService;
 
-import java.time.LocalDateTime;
-import java.time.ZoneId;
 import java.time.ZonedDateTime;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -32,9 +28,7 @@ public class RetriggerWaTasksForFixedCaseIdHandlerTest {
 
 
     @Mock
-    private DateProvider dateProvider;
-    @Mock
-    private Scheduler scheduler;
+    private CcdDataService ccdDataService;
     @Mock
     private Callback<AsylumCase> callback;
     @Mock
@@ -50,9 +44,6 @@ public class RetriggerWaTasksForFixedCaseIdHandlerTest {
     @Captor
     private ArgumentCaptor<String> timedEventIdCaptor;
 
-    private boolean timedEventServiceEnabled = true;
-    private LocalDateTime now = LocalDateTime.now();
-    private String timedEventId = "";
     private long caseId = Long.parseLong("1677132005196104");
     private String jurisdiction = "IA";
     private String caseType = "Asylum";
@@ -61,11 +52,7 @@ public class RetriggerWaTasksForFixedCaseIdHandlerTest {
 
     @BeforeEach
     public void setUp() {
-        retriggerWaTasksForFixedCaseIdHandler = new RetriggerWaTasksForFixedCaseIdHandler(
-            true,
-            dateProvider,
-            scheduler
-        );
+        retriggerWaTasksForFixedCaseIdHandler = new RetriggerWaTasksForFixedCaseIdHandler(ccdDataService);
     }
 
     @Test
@@ -84,24 +71,12 @@ public class RetriggerWaTasksForFixedCaseIdHandlerTest {
 
     @Test
     void handle_callback_should_return_false_timed_event_service_disabled() {
-        retriggerWaTasksForFixedCaseIdHandler =
-            new RetriggerWaTasksForFixedCaseIdHandler(
-                false,
-                dateProvider,
-                scheduler
-            );
         boolean canHandle = retriggerWaTasksForFixedCaseIdHandler.canHandle(callbackStage, callback);
         assertThat(canHandle).isEqualTo(false);
     }
 
     @Test
     void handling_should_throw_if_cannot_handle() {
-        retriggerWaTasksForFixedCaseIdHandler =
-            new RetriggerWaTasksForFixedCaseIdHandler(
-                timedEventServiceEnabled,
-                dateProvider,
-                scheduler
-            );
         assertThatThrownBy(
             () -> retriggerWaTasksForFixedCaseIdHandler.handle(callbackStage, callback))
             .hasMessage("Cannot handle callback")
@@ -110,12 +85,6 @@ public class RetriggerWaTasksForFixedCaseIdHandlerTest {
 
     @Test
     void handling_should_throw_if_null_callback() {
-        retriggerWaTasksForFixedCaseIdHandler =
-            new RetriggerWaTasksForFixedCaseIdHandler(
-                timedEventServiceEnabled,
-                dateProvider,
-                scheduler
-            );
         assertThatThrownBy(
             () -> retriggerWaTasksForFixedCaseIdHandler.handle(null, callback))
             .hasMessage("callbackStage must not be null")
@@ -127,111 +96,70 @@ public class RetriggerWaTasksForFixedCaseIdHandlerTest {
     }
 
     @Test
-    void should_not_schedule_anything_when_case_list_field_null() {
-        retriggerWaTasksForFixedCaseIdHandler =
-            new RetriggerWaTasksForFixedCaseIdHandler(
-                timedEventServiceEnabled,
-                dateProvider,
-                scheduler
-            );
+    void should_not_trigger_anything_when_case_list_field_null() {
         when(callback.getEvent()).thenReturn(Event.RE_TRIGGER_WA_BULK_TASKS);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getCaseData()).thenReturn(asylumCase);
-        when(dateProvider.nowWithTime()).thenReturn(now);
+
         retriggerWaTasksForFixedCaseIdHandler.handle(callbackStage, callback);
-        verify(scheduler, times(0)).scheduleTimedEvent(anyString(), any(ZonedDateTime.class), any(Event.class), anyString());
+
+        verify(ccdDataService, times(0)).retriggerWaTasks(anyString());
+        verify(asylumCase, times(0)).clear(AsylumCaseFieldDefinition.CASE_ID_LIST);
     }
 
     @Test
-    void should_not_schedule_anything_when_case_list_field_empty() {
-        retriggerWaTasksForFixedCaseIdHandler =
-            new RetriggerWaTasksForFixedCaseIdHandler(
-                timedEventServiceEnabled,
-                dateProvider,
-                scheduler
-            );
+    void should_not_trigger_anything_when_case_list_field_empty() {
         when(callback.getEvent()).thenReturn(Event.RE_TRIGGER_WA_BULK_TASKS);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getCaseData()).thenReturn(asylumCase);
-        when(dateProvider.nowWithTime()).thenReturn(now);
         when(asylumCase.read(AsylumCaseFieldDefinition.CASE_ID_LIST, String.class))
             .thenReturn(java.util.Optional.of(""));
+
         retriggerWaTasksForFixedCaseIdHandler.handle(callbackStage, callback);
-        verify(scheduler, times(0)).scheduleTimedEvent(anyString(), any(ZonedDateTime.class), any(Event.class), anyString());
+
+        verify(ccdDataService, times(0)).retriggerWaTasks(anyString());
+        verify(asylumCase, times(0)).clear(AsylumCaseFieldDefinition.CASE_ID_LIST);
+
     }
 
     @Test
-    void should_only_schedule_for_valid_case_ids() {
-        retriggerWaTasksForFixedCaseIdHandler =
-            new RetriggerWaTasksForFixedCaseIdHandler(
-                timedEventServiceEnabled,
-                dateProvider,
-                scheduler
-            );
+    void should_only_trigger_for_valid_case_ids() {
         when(callback.getEvent()).thenReturn(Event.RE_TRIGGER_WA_BULK_TASKS);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getCaseData()).thenReturn(asylumCase);
-        when(dateProvider.nowWithTime()).thenReturn(now);
         when(asylumCase.read(AsylumCaseFieldDefinition.CASE_ID_LIST, String.class))
             .thenReturn(java.util.Optional.of("1,2,3,5,6,8,2,1,26,8,1677132005196104"));
         retriggerWaTasksForFixedCaseIdHandler.handle(callbackStage, callback);
-        verify(scheduler, times(1)).scheduleTimedEvent(
-            caseIdCaptor.capture(),
-            scheduledDateCaptor.capture(),
-            eventCaptor.capture(),
-            timedEventIdCaptor.capture()
-        );
 
-        ZonedDateTime timeToSchedule = ZonedDateTime.of(now, ZoneId.systemDefault()).plusMinutes(5);
+        verify(ccdDataService, times(1)).retriggerWaTasks(caseIdCaptor.capture());
+        verify(asylumCase, times(1)).clear(AsylumCaseFieldDefinition.CASE_ID_LIST);
+
         String finalCaseId = caseIdCaptor.getValue();
-        ZonedDateTime finalScheduledDate = scheduledDateCaptor.getValue();
-        Event finalEvent = eventCaptor.getValue();
-
         assertEquals("1677132005196104", finalCaseId);
-        assertEquals(timeToSchedule, finalScheduledDate);
-        assertEquals(Event.RE_TRIGGER_WA_TASKS, finalEvent);
-
         List<String> capturedCaseIds = caseIdCaptor.getAllValues();
         List<String> expectedCaseIds = List.of("1677132005196104");
-
         assertEquals(expectedCaseIds, capturedCaseIds);
     }
 
     @Test
-    void should_schedule_re_trigger_wa_tasks_5_minutes_in_future_for_all_case_ids() {
-        retriggerWaTasksForFixedCaseIdHandler =
-            new RetriggerWaTasksForFixedCaseIdHandler(
-                timedEventServiceEnabled,
-                dateProvider,
-                scheduler
-            );
+    void should_trigger_re_trigger_wa_tasks_for_all_case_ids() {
         when(callback.getEvent()).thenReturn(Event.RE_TRIGGER_WA_BULK_TASKS);
         when(callback.getCaseDetails()).thenReturn(caseDetails);
         when(caseDetails.getCaseData()).thenReturn(asylumCase);
-        when(dateProvider.nowWithTime()).thenReturn(now);
         when(asylumCase.read(AsylumCaseFieldDefinition.CASE_ID_LIST, String.class))
             .thenReturn(java.util.Optional.of("5260728023204485, 7829484608979593, 3007004947258233," +
                 "4719620009252072,6797092066725243,9301281768878771,8509676174519453," +
                 "1682542357170697,3673342967892569,1677132005196104"));
         retriggerWaTasksForFixedCaseIdHandler.handle(callbackStage, callback);
-        verify(scheduler, times(10)).scheduleTimedEvent(
-            caseIdCaptor.capture(),
-            scheduledDateCaptor.capture(),
-            eventCaptor.capture(),
-            timedEventIdCaptor.capture()
-        );
 
-        ZonedDateTime timeToSchedule = ZonedDateTime.of(now, ZoneId.systemDefault()).plusMinutes(5);
+        verify(ccdDataService, times(10)).retriggerWaTasks(caseIdCaptor.capture());
+        verify(asylumCase, times(1)).clear(AsylumCaseFieldDefinition.CASE_ID_LIST);
+
         String finalCaseId = caseIdCaptor.getValue();
-        ZonedDateTime finalScheduledDate = scheduledDateCaptor.getValue();
-        Event finalEvent = eventCaptor.getValue();
 
         assertEquals("1677132005196104", finalCaseId);
-        assertEquals(timeToSchedule, finalScheduledDate);
-        assertEquals(Event.RE_TRIGGER_WA_TASKS, finalEvent);
-
         List<String> capturedCaseIds = caseIdCaptor.getAllValues();
-        List<String> expectedCaseIds = Arrays.asList(
+        List<String> expectedCaseIds = List.of(
             "5260728023204485",
             "7829484608979593",
             "3007004947258233",
@@ -243,6 +171,28 @@ public class RetriggerWaTasksForFixedCaseIdHandlerTest {
             "3673342967892569",
             "1677132005196104"
         );
+
+        assertEquals(expectedCaseIds, capturedCaseIds);
+    }
+
+
+    @Test
+    void should_trigger_re_trigger_wa_tasks_for_one_case_ids() {
+        when(callback.getEvent()).thenReturn(Event.RE_TRIGGER_WA_BULK_TASKS);
+        when(callback.getCaseDetails()).thenReturn(caseDetails);
+        when(caseDetails.getCaseData()).thenReturn(asylumCase);
+        when(asylumCase.read(AsylumCaseFieldDefinition.CASE_ID_LIST, String.class))
+            .thenReturn(java.util.Optional.of("5260728023204485"));
+        retriggerWaTasksForFixedCaseIdHandler.handle(callbackStage, callback);
+
+        verify(ccdDataService, times(1)).retriggerWaTasks(caseIdCaptor.capture());
+        verify(asylumCase, times(1)).clear(AsylumCaseFieldDefinition.CASE_ID_LIST);
+
+        String finalCaseId = caseIdCaptor.getValue();
+
+        assertEquals("5260728023204485", finalCaseId);
+        List<String> capturedCaseIds = caseIdCaptor.getAllValues();
+        List<String> expectedCaseIds = List.of("5260728023204485");
 
         assertEquals(expectedCaseIds, capturedCaseIds);
     }
